Fix the naming of the vertical spacing object package (was horizontal spacing).

--- a/packages/object-vertical-spacing/scss/_mixins.scss
+++ b/packages/object-vertical-spacing/scss/_mixins.scss
@@ -1,23 +1,23 @@
 ////
-/// @group Object: horizontal-spacing
+/// @group Object: vertical-spacing
 /// @author Markus Oberlehner
 ////
 
-/// Add horizontal spacing to all child elements.
+/// Add vertical spacing to all child elements.
 ///
 /// @param {Number [unit]} $spacing [1em]
 ///   Spacing.
 ///
 /// @example scss - Usage
 ///   .selector {
-///     @include o-horizontal-spacing();
+///     @include o-vertical-spacing();
 ///   }
 ///
 /// @example css - CSS Output
 ///   .selector > * + * {
 ///     margin-top: 1em;
 ///   }
-@mixin o-horizontal-spacing($spacing: 1em) {
+@mixin o-vertical-spacing($spacing: 1em) {
   > * + * {
     margin-top: $spacing;
   }
