--- a/packages/object-vertical-spacing/test/test.scss
+++ b/packages/object-vertical-spacing/test/test.scss
@@ -1,5 +1,5 @@
 @import '../scss/index';
 
-.o-horizontal-spacing {
+.o-vertical-spacing {
   background: #efefef;
 }
